[package]
name = "webwire"
version = "0.1.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Webwire library for Rust"
keywords = ["webwire", "contract-first", "api"]
license = "MIT/Apache-2.0"
repository = "https://github.com/webwire/webwire-rust"
readme = "README.md"
edition = "2018"

[dependencies]
async-trait = "0.1"
bytes = "0.5"
dashmap = "3.11"
futures = "0.3"
hyper = "0.13"
hyper-websocket-lite = "0.3.5"
websocket-codec = "0.3.5"
nom = "6.0"
serde_json = "1"
log = "0.4"
ahash = "0.3"
validator = "0.11"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
features = ["full"]
version = "0.2"

[dependencies.uuid]
features = ["serde"]
version = "0.8"
