[package]
name = "webwire"
version = "0.1.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Webwire library for Rust"
keywords = ["webwire", "contract-first", "api"]
license = "MIT/Apache-2.0"
repository = "https://github.com/webwire/webwire-rust"
readme = "README.md"
edition = "2018"

[dependencies]
async-trait = "0.1"
bytes = "1"
dashmap = "4"
futures = "0.3"
hyper = { version = "0.14", features = ["http1", "http2", "server", "stream", "runtime"] }
hyper-websocket-lite = "0.5"
log = "0.4"
nom = "6"
serde_json = "1"
validator = "0.12"
websocket-codec = "0.5"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
features = ["full"]
version = "1.0"

[dependencies.uuid]
features = ["serde"]
version = "0.8"
