[package]
name = "webwire"
version = "0.4.1-pre"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Webwire library for Rust"
keywords = ["webwire", "contract-first", "api"]
license = "MIT/Apache-2.0"
repository = "https://github.com/webwire/webwire-rust"
readme = "README.md"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
axum-macros = "0.3"
async-trait = "0.1"
base64 = "0.21"
byteorder = "1"
bytes = "1"
dashmap = "5"
futures = "0.3"
lapin = "2.1.1"
log = "0.4"
nom = "7"
redis = { version = "0.22", features = ["tokio-comp"], optional = true }
deadpool-redis = "0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-amqp = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["serde"] }
validator = "0.16"
tracing = "0.1.29"
hyper = "0.14.19"
tower-service = "0.3.2"

[workspace]
members = [
    #"examples/*"
]
