[package]
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
edition = "2018"
name = "webwire-amqp-example"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_json = "1"
bytes = "1"
hyper = "0.14"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "0.8", features = ["serde"] }
validator = { version = "0.14", features = ["derive"] }

[dependencies.webwire]
path = "../../"
