[package]
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
edition = "2018"
name = "webwire-example-chat"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "3.0.14", features = ["derive"] }
config = "0.11"
deadpool-redis = { version = "0.10", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3"
hyper = "0.14"
redis = "0.21.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.2.0"
url = "2"
uuid = { version = "0.8", features = ["serde"] }
validator = { version = "0.14", features = ["derive"] }

[dependencies.webwire]
path = "../../"
features = ["redis"]
