[package]
name = "api"
version = "0.1.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
edition = "2018"

[dependencies]
webwire = { path="../../../" }
async-trait = "0.1"
serde = { version="1", features=["derive"] }
bytes = "1"
futures = "0.3"
serde_json = "1"
uuid = { version="0.8", features=["serde"] }
validator = { version="0.12", features=["derive"] }
